--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@ min-height: 120px;
 }
 
 img{
-    height: 60px;
     width: 60px;
     border: radius 10px; ;
+    text-align: center;
 
 }
 h1{
@@ -15,6 +15,18 @@ h1{
     display: inline-block;
     
 
+
+
+}
+footer{
+    width: 50%;
+    display: inline-block;
+
+    
+}
+h3{
+size: 1.5em;
+font-weight: bold;
 
 
 }
